Update comparison report with latest posting date and refreshed data

--- a/laksh_creator_comparison_report.html
+++ b/laksh_creator_comparison_report.html
@@ -9,6 +9,8 @@
         .summary h2 { color: #4CAF50; margin-top: 0; }
         .stat-box { display: inline-block; background-color: #e3f2fd; padding: 15px 20px; margin: 10px; border-radius: 5px; border-left: 4px solid #2196F3; }
         .stat-box strong { display: block; font-size: 24px; color: #1976D2; }
+        .date-info { background-color: #fff3cd; padding: 15px; margin: 15px 0; border-radius: 5px; border-left: 4px solid #ffc107; }
+        .date-info strong { color: #856404; }
         table { border-collapse: collapse; width: 100%; background-color: white; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
         th { background-color: #4CAF50; color: white; padding: 12px; text-align: left; font-weight: bold; position: sticky; top: 0; }
         td { padding: 10px; border-bottom: 1px solid #ddd; }
@@ -38,6 +40,11 @@
         <div class="stat-box">
             <strong>104</strong>
             <span>Total Extra Payment Entries</span>
+        </div>
+        <div class="date-info">
+            <strong>📅 Latest Video Posting Date:</strong> January 07, 2026<br>
+            <strong>📊 Total LAKSH Reels:</strong> 75 reels<br>
+            <strong>📅 Date Range:</strong> November 09, 2025 to January 07, 2026
         </div>
     </div>
     <div class="container">
